language/move-compiler/tests/move_check/translate/friend_in_expression_seq.move
script {
    fun main() {
        friend 0x2::G;
    }
}
